--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "watch": "ncc build src/index.js --watch --minify",
     "build": "ncc build src/index.js --minify",
-    "test": "ava && xo"
+    "test": "ava && xo",
+    "lint:fix": "xo --fix"
   },
   "repository": {
     "type": "git",
