feat(action): add possibility to delete a card from project

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
   column:
     description: 'The name of the column to move the issue or pull request to'
     required: true
+  delete:
+    description: 'If set to true, then the matching carg will deleted from the project'
+    required: false
+    default: "false"
 runs:
   using: 'node12'
   main: 'dist/index.js'
