--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -6,7 +6,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - run: |
-          npm i
-          npm run test
+      - uses: actions/checkout@main
+      - run: npm i
+      - run: npm run test
