--- a/package.json
+++ b/package.json
@@ -32,17 +32,11 @@
 		"@actions/github": "^2.1.1"
 	},
 	"devDependencies": {
-		"@zeit/ncc": "^0.20.4",
-		"ava": "^3.5.1",
-		"husky": "^3.0.5",
-		"xo": "^0.27.2"
+		"@vercel/ncc": "^0.28.4",
+		"ava": "^3.15.0",
+		"xo": "^0.39.1"
 	},
 	"files": [
 		"dist/index.js"
-	],
-	"husky": {
-		"hooks": {
-			"pre-commit": "npm run build && git add ./dist/index.js"
-		}
-	}
+	]
 }
