Add 'column-{allow/deny}-list' optional inputs
This adds the `column-allow-list` and `column-deny-list` optional
inputs. If neither is set the behavior of the action is identical to
before.

`column-allow-list` may be set to a string or list of strings
(separated by comma or newline character) which specifes columns that
the action may move cards from only. That is, if `column-deny-list` is
set to `todo,wip` then only cards in `todo` and `wip` can be moved by
the job. If unset all cards in all columns may be moved (assuming
`column-deny-list` is also unset).

 `column-deny-list` may also be set to a string or list of strings
(again, separated by a comma or newline character) which specifies
columns that the action may never move cards. That is, if
`column-deny-list` is set to `todo,wip` then cards in `todo` and `wip`
will not be moved by the job. If unset all the cards in all the columns
may be moved (assuming `column-allow-list` is also unset).
from.

This addresses:
https://github.com/alex-page/github-project-automation-plus/issues/41.

Tests have been added to verify previous behavior is preserved and
these new inputs function as intended.

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,16 @@ inputs:
   column:
     description: 'The name of the column to move the issue or pull request to'
     required: true
+  column-allow-list:
+    type: string
+    description: 'Columns which cards are allowed to be moved from. If not specified, all columns are allowed. Multiple columns separated by newline or comma.'
+    required: false
+    default: ''
+  column-deny-list:
+    type: string
+    description: 'Columns which cards are not allowed to be moved from. If not specified, no columns are denied. Multiple columns separated by newline or comma.'
+    required: false
+    default: ''
   action:
     description: |
       Can be `update`, `delete` or `archive` or `add`. This determines the type of the action
